--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Pessoal</title>
     <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/hero.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
 </head>
@@ -26,8 +27,15 @@
     <nav>
         <a href="">Blog</a>
         <a href="" class="button">Contato</a>
-    </nav>
-</header>
+      </nav>
+   </header>
+ 
+   <section class="hero container">
+      <h1>Designer, Fronted Developer & Vídeo Maker</h1>
+      <h2>Eu desenho e codifico projetos bonitos e amo o que faço</h2>
+      <img src="./assets/images/avatar.svg" alt="hero-avatar">
+      <img src="./assets/images/hero-devices.svg" alt="" class="hero-device">
+   </section>
 </body>
 <script src="./assets/js/script.js"></script>
 </html>
