--- a/index.html
+++ b/index.html
@@ -3,54 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio Pessoal</title>
-    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/css/hero.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/hero.css">
     <link rel="stylesheet" href="./assets/css/intro.css">
     <link rel="stylesheet" href="./assets/css/skills.css">
+    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
+    <title>Bruno da Silva</title>
 </head>
 <body>
-   <header class="container">
-    <div class="navbar">
-    <div class="logo">
-        <a href="">
-            <img src="./assets/images/logo.png"
-            alt="">
-        </a>   
-    </div>
-    <div class="menu-opener">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-    </div>
-    <nav>
-        <a href="">Blog</a>
-        <a href="" class="button">Contato</a>
-      </nav>
-   </header>
- 
-   <section class="hero container">
-      <h1>Designer, Fronted Developer & Vídeo Maker</h1>
-      <h2>Eu desenho e codifico projetos bonitos e amo o que faço</h2>
-      <img src="./assets/images/avatar.svg" alt="hero-avatar">
-      <img src="./assets/images/hero-devices.svg" alt="" class="hero-device">
-   </section>
-</body>
-<section class="intro">
-    <div class="container">
-        <div class="box">
-            <p class="title">Oi, eu sou Bruno da Silva, tudo bem?</p>
+    <header class="container">
+        <div class="navbar">
+            <div class="logo">
+                <a href=""><img src="./assets/images/logo.png" alt=""></a>
+            </div>
+            <div class="menu-opener">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <nav>
+            <a href="">Blog</a>
+            <a href="" class="button">Contato</a>
+        </nav>
+    </header>
+
+    <section class="hero container">
+        <h1>Designer, Frontend Developer & Video Maker</h1>
+        <h2>Eu desenho e codifico projetos bonitos
+             e amo o que faço.</h2>
+        <img src="./assets/images/avatar.svg" 
+        alt="" class="hero-avatar">
+        <img src="./assets/images/hero-devices.svg" 
+        alt="" class="hero-device">
+    </section>
+
+    <section class="intro">
+        <div class="container">
+            <div class="box">
+                <p class="title">Oi, eu sou Bruno da Silva, tudo bem?</p>
                 <p class="subtitle">Desde que comecei minha jornada como designer freelancer, há 12 anos, fiz trabalhos remotos
                     para agências, ajudei startups e colaborei com pessoas talentosas para criar
                     produtos digitais para ambos uso empresarial e do consumidor. Sou bastante, naturalmente curioso
                     e trabalho para melhorar minhas habilidades constantemente.
                 </p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+
     <section class="skills">
         <div class="skills-overlay">
             <div class="container">
@@ -117,7 +118,8 @@
             </div>
         </div>
     </section>
- 
 
-<script src="./assets/js/script.js"></script>
+    <script type="text/javascript" 
+    src="./assets/js/script.js"></script>
+</body>
 </html>
